# dm-isaac-g1

./: .env.example  .gitignore  README.md  agent.md  pyproject.toml
cleanup/: README.md  grootenv_main.yml
cloud/: setup_instance.sh  train_8gpu.sh
cloud/ecs/: GUIDE.md  replay.sh  run.sh  setup.sh  sim2sim.sh  test.sh  train_mimic.sh  train_rl.sh
cloud/vastai/: launch.sh
configs/: g1_robot.yaml  scene.yaml  training.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  ARDIA_ROBOTICS_PLATFORM_STRATEGY.md  DOCKER_ENVIRONMENT_STATUS.html  DOCKER_ENVIRONMENT_STATUS.md  ENVIRONMENT_SETUP.md  ENVIRONMENT_SETUP_LEARNINGS.md  FINETUNING_GUIDE.md  FINETUNING_LOG.md  FINETUNING_PLAN.md  G1_INSPIRE_TRAINING_PLAN.md  GROOT_WBC_DEEP_DIVE.html  GROOT_WBC_DEEP_DIVE.md  IMPLEMENTATION_PLAN.md  INFERENCE_ARCHITECTURE_COMPARISON.html  INFERENCE_ARCHITECTURE_COMPARISON.md  INFERENCE_DEBUGGING.md  INFERENCE_EXAMPLES.md  INFERENCE_GUIDE.md  INFERENCE_SETUP.md  MUJOCO_EVAL_GUIDE.md  NUMPY_COMPATIBILITY.md  PHYSICS_ENGINE_LEARNINGS.md  RESTRUCTURING_PLAN.md  SIM2SIM_DEPLOY_GUIDE.md  SIMULATION_INFERENCE_GUIDE.md  SPARK_WORKSTATION_GUIDE.md  SSH.md  TEAM_MODEL_SUMMARY.md  TEAM_UPDATE_2026_02_26.md  UNITREE_G1_GRIPPER_INFERENCE_CHANGES.md  WBC_ARCHITECTURE.md  WORKSTATION_ENVIRONMENT_MAP.md
docs/issues/: DEVOPS-001-assimp-pink-library-conflict.md  DEVOPS-002-unitree-docker-migration.md
environments/: README.md  TODO.md
environments/spark/: Dockerfile  Dockerfile.spark  docker-compose.spark.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-groot-spark.txt  setup.sh
environments/spark/patches/: robot_viser_av1_fallback.patch
environments/tests/: test_build.py  test_environment.py  test_functional.py
environments/workstation/: Dockerfile  Dockerfile.unitree  build-on-ec2.sh  docker-compose.unitree.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-groot.txt  setup.sh
environments/workstation/configs/: cyclonedds.xml
environments/workstation/patches/: rewards_custom.py
phases/phase1_inference/: __init__.py  g1_scene.py  groot_client.py  run_inference.py
phases/phase2_rl/: __init__.py  g1_env.py  rewards.py  train.py
phases/phase3_finetuning/: __init__.py  finetune.py
phases/phase4_navigation/: __init__.py  navigation.py
scripts/: batch_convert_inspire.sh  callbacks.py  check_workstation.sh  combine_inspire_datasets.py  connect_workstation.sh  convert_to_inspire.py  dump_joint_limits.py  example_use_lococlient_simversion.py  finetune_groot.sh  finetune_groot_overnight.sh  finetune_pnp_v2_continue.sh  finetune_pnp_v3.sh  g1_inspire_simple_config.py  g1_inspire_unified_config.py  inference_setups.py  launch_finetune_v2_continue.py  launch_finetune_v3.py  launch_finetune_v3_continue.py  launch_multi_finetune.py  launch_scene_ui.py  load_inspire_wholebody.py  play_policy.sh  policy_inference_groot_g1.py  policy_inference_groot_g1_copy.py  policy_inference_locomotion.py  policy_inference_mujoco.py  run_all_phases.sh  run_g1_demo.sh  run_groot_inference.sh  run_in_container.sh  run_navigation.sh  setup_workstation.sh  test_camera_stable.py  test_camera_view.py  test_groot_connection.py  test_groot_unitree_g1.py  test_isaac_sim.py  train_rl.sh  view_g1_usd.py
scripts/eval/: run_mujoco_towel_eval.py  run_mujoco_towel_eval_wbc.py  run_multi_task_eval.sh  run_official_eval.sh  setup_eval_workstation.sh  setup_official_eval.sh
scripts/eval/mujoco_towel_scene/: g1_dex1_towel_folding.xml  g1_gripper_towel_folding.xml  g1_towel_folding.xml  setup_scene.sh
scripts/sim2sim/: joystick_trigger.py
scripts/training/: finetune_fold_towel.sh  finetune_hospitality_7ds.sh  finetune_resume.sh  merge_datasets.py
src/dm_isaac_g1/: __init__.py  __main__.py  cli.py
src/dm_isaac_g1/configs/: __init__.py  camera_configs.py
src/dm_isaac_g1/core/: __init__.py  config.py  remote.py  robot.py  robot_configs.py
src/dm_isaac_g1/data/: __init__.py  convert.py  convert_to_groot.py  download.py  stats.py  validate.py
src/dm_isaac_g1/finetuning/: __init__.py  callbacks.py  launcher.py
src/dm_isaac_g1/finetuning/configs/: __init__.py  g1_dex3_28dof.py  g1_gripper_unitree.py  g1_inspire_53dof.py
src/dm_isaac_g1/imitation/: __init__.py
src/dm_isaac_g1/inference/: __init__.py  client.py  isaac_runner.py  server.py
src/dm_isaac_g1/mimic/: __init__.py
src/dm_isaac_g1/mimic/scripts/: export_policy.py  pkl_to_csv.py  play.py  train.py
src/dm_isaac_g1/mimic/tasks/: __init__.py
src/dm_isaac_g1/mimic/tasks/clip_01_instagram_0_7s/: __init__.py  clip_01_instagram_0_7s.npz  tracking_env_cfg.py
src/dm_isaac_g1/mimic/tasks/clip_05_youtube_69_75s/: __init__.py  clip_05_youtube_69_75s.npz  tracking_env_cfg.py
src/dm_isaac_g1/mimic/tasks/clip_08_youtube_long_367_370s/: __init__.py  clip_08_youtube_long_367_370s.npz  tracking_env_cfg.py
src/dm_isaac_g1/mimic/tasks/clip_09_youtube_long_374_376s/: __init__.py  clip_09_youtube_long_374_376s.npz  tracking_env_cfg.py
src/dm_isaac_g1/mimic/tasks/cr7_06_tiktok_uefa/: __init__.py  cr7_06_tiktok_uefa.npz  tracking_env_cfg.py
src/dm_isaac_g1/mimic/tasks/cr7_06_youtube_run/: __init__.py  (+2 more)
src/dm_isaac_g1/rl/: __init__.py  install_tasks.py
src/dm_isaac_g1/rl/environments/: __init__.py
src/dm_isaac_g1/rl/policies/: __init__.py
src/dm_isaac_g1/rl/scripts/: play.py  sim2sim.py  train.py
src/dm_isaac_g1/rl/tasks/: __init__.py
src/dm_isaac_g1/sim2sim/: __init__.py  deploy_config.py  fsm.py  keyboard_controller.py  motion_loader.py  observation_builder.py  policy_loader.py  runner.py
unitree_rl_lab/: README.md
unitree_rl_lab/deploy/include/: JoystickInjector.h
unitree_rl_lab/deploy/include/FSM/: FSMState.h
unitree_rl_lab/deploy/robots/g1_29dof/: CMakeLists.txt
unitree_rl_lab/deploy/robots/g1_29dof/config/: config.yaml
unitree_rl_lab/deploy/robots/g1_29dof/config/policy/military_march/exported/: deploy.yaml
unitree_rl_lab/deploy/robots/g1_29dof/config/policy/military_march/params/: agent.yaml  env.yaml
unitree_rl_lab/deploy/tools/: joystick_adapter.py  teleop.py  tempganga.py
(+21 files in other folders)
