# Spark Environment (ARM64 Inference Server)
# Based on working dm-groot-inference configuration
# Architecture: ARM64 (DGX Spark / Grace Hopper)

[project]
name = "dm-spark-inference"
version = "0.1.0"
description = "GROOT inference environment for ARM64 (DGX Spark / Grace Hopper)"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}

# Dependencies from dm-groot-inference pyproject.toml
dependencies = [
    # ML/DL Framework (versions from working setup)
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",

    # Data / HuggingFace
    "huggingface-hub>=0.21.0",
    "numpy>=1.26.0,<2.0.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.9.0",

    # API Server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",

    # GROOT dependencies
    "einops>=0.7.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",

    # ZMQ for GROOT server
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
