# Workstation Environment (Blackwell)
# For GROOT fine-tuning and Isaac Sim/Lab simulation
# Architecture: x86_64 with NVIDIA GPU

[project]
name = "dm-workstation-env"
version = "0.1.0"
description = "Unified environment for GROOT training and Isaac Sim/Lab simulation"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}

dependencies = [
    # ==========================================
    # Core dependencies (from dm-isaac-g1)
    # ==========================================
    "numpy>=1.26.0,<2.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",

    # ==========================================
    # ML/DL Framework
    # ==========================================
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",

    # ==========================================
    # Data Processing
    # ==========================================
    "pyarrow>=15.0.0",
    "huggingface-hub>=0.21.0",
    "h5py>=3.10.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.9.0",
    "scipy>=1.12.0",

    # ==========================================
    # RL & Simulation
    # ==========================================
    "gymnasium>=0.29.0",
    "flatdict>=4.0.0",

    # ==========================================
    # Network / Communication
    # ==========================================
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",

    # ==========================================
    # Visualization / Logging
    # ==========================================
    "tensorboard>=2.16.0",
    "wandb>=0.16.0",

    # ==========================================
    # GROOT Fine-tuning (Isaac-GR00T deps)
    # ==========================================
    "einops>=0.7.0",
    "timm>=0.9.0",
    "diffusers>=0.27.0",
    "peft>=0.10.0",

    # ==========================================
    # Unitree SDK / Robot Control
    # ==========================================
    "cyclonedds>=0.10.2",
    # Note: unitree_sdk2py installed from source

    # ==========================================
    # IK / Motion Planning
    # ==========================================
    "pin>=2.7.0",
    "qpsolvers[open_source_solvers]>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "ipython>=8.0.0",
]

# Packages to install from source
# Note: Some packages need special handling
[tool.uv.sources]
# unitree_sdk2py must be installed from GitHub
# cyclonedds must be built from source for DDS support
