# Workstation Environment (Blackwell)
# For GROOT fine-tuning and Isaac Sim/Lab simulation
# Based on actual installed dependencies from ENVIRONMENT_SETUP_LEARNINGS.md

[project]
name = "dm-workstation-env"
version = "0.1.0"
description = "Unified environment for GROOT training and Isaac Sim/Lab simulation"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}

dependencies = [
    # ==========================================
    # Core dependencies (from dm-isaac-g1)
    # ==========================================
    "numpy>=1.26.0,<2.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",

    # ==========================================
    # ML/DL Framework
    # ==========================================
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",

    # ==========================================
    # Data Processing
    # ==========================================
    "pyarrow>=15.0.0",
    "huggingface-hub>=0.21.0",
    "h5py>=3.10.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.9.0",
    "scipy>=1.12.0",

    # ==========================================
    # RL & Simulation (from ENVIRONMENT_SETUP_LEARNINGS.md)
    # ==========================================
    "gymnasium",
    "flatdict",

    # ==========================================
    # Network / Communication
    # ==========================================
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",
    "aiohttp",
    "aiortc",

    # ==========================================
    # Visualization / Logging
    # ==========================================
    "tensorboard>=2.16.0",
    "wandb>=0.16.0",

    # ==========================================
    # GROOT Fine-tuning (Isaac-GR00T deps)
    # ==========================================
    "einops>=0.7.0",
    "timm>=0.9.0",
    "diffusers>=0.27.0",
    "peft>=0.10.0",
    "onnxruntime>=1.22.0",
    "logging_mp>=0.1.5",

    # ==========================================
    # IK / Motion Planning (from ENVIRONMENT_SETUP_LEARNINGS.md)
    # ==========================================
    "pin>=2.7.0",
    "qpsolvers[open_source_solvers]>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "ipython>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

# ==========================================
# Note: Additional packages installed from source
# ==========================================
# CycloneDDS: Built from source (releases/0.10.x)
#   export CYCLONEDDS_HOME=/workspace/cyclonedds/install
#
# unitree_sdk2py: Installed from GitHub
#   git clone https://github.com/unitreerobotics/unitree_sdk2_python.git
#   /isaac-sim/python.sh -m pip install .
#
# Isaac Lab: Uses Isaac Sim's embedded Python
#   /isaac-sim/python.sh -m pip install ...
