# Workstation Environment (Blackwell)
# Additional dependencies beyond Isaac Sim + IsaacLab
#
# NOTE: Isaac Sim 5.0.0 + IsaacLab v2.2.0 already provide:
# - numpy, scipy, pillow, h5py, pyyaml
# - torch, torchvision (bundled)
# - gymnasium, tensorboard
# - warp, pink, pinocchio (via ./isaaclab.sh --install)

[project]
name = "dm-workstation-env"
version = "0.1.0"
description = "Additional dependencies for GROOT inference and dm-isaac-g1"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}

dependencies = [
    # ==========================================
    # dm-isaac-g1 CLI
    # ==========================================
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",

    # ==========================================
    # GROOT Model Dependencies
    # ==========================================
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.21.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "diffusers>=0.27.0",
    "peft>=0.10.0",

    # ==========================================
    # GROOT Server Communication
    # ==========================================
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",

    # ==========================================
    # Network / SSH
    # ==========================================
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "aiohttp",
    "aiortc",

    # ==========================================
    # Data Processing
    # ==========================================
    "pyarrow>=15.0.0",
    "opencv-python-headless>=4.9.0",

    # ==========================================
    # Logging
    # ==========================================
    "wandb>=0.16.0",

    # ==========================================
    # Utilities
    # ==========================================
    "flatdict",
    "onnxruntime>=1.22.0",
    "logging_mp>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
